CSS and Basic Site setup

--- a/app/main/templates/bases/footer.html
+++ b/app/main/templates/bases/footer.html
@@ -1,8 +1,8 @@
 <footer>
-    <nav class="navbar navbar-expand-sm  fixed-bottom">
+    <nav class="navbar navbar-expand-sm p-2 fixed-bottom">
         <div class="mx-left">
             <p class="mt-5 mb-3 text-muted">
-                Made with ❤️ by you
+                Made by Zachary Lilley
             </p> 
         </div>
         <div class="mx-auto" >
@@ -13,7 +13,7 @@
         <div class="mx-right" >
             <p class="mt-5 mb-3 text-muted">
                 Copyright &copy; 2020
-                <a href="#">your website</a>
+                <a href="#">zdlcollective.com</a>
             </p> 
         </div>
     </nav>
