--- a/app/main/templates/bases/main.html
+++ b/app/main/templates/bases/main.html
@@ -6,33 +6,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    {# CSS Bootstrap #}
+    {# Load template tags #}
     {% load django_bootstrap5 %}
-    {% bootstrap_css %}
-
     {% load static %}
+
+    {# CSS Bootstrap #}
+    {% bootstrap_css %}
 
 </head>
 <body class="override">
 
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-        <h4 class="my-0 mr-md-auto font-weight-normal"><a class="p-2 text-dark" href="/">AppName</a></h4>
-        <nav class="my-2 my-md-0 mr-md-3">
-            {% if current_user is None %}
-                <a class="p-2 text-dark" href="/login">Log in</a>
-                <a class="p-2 text-dark" href="/register">Sign up</a>
-            {% endif %}
-            <a class="p-2 text-dark" href="/about">About</a>
-            <a class="p-2 text-dark" href="#help" data-bs-toggle="modal" data-bs-target="#myModal">Help</a>
-            <a class="p-2 text-dark" href="/pricing">Pricing</a>
-            {% if current_user is not None %}
-                <a class="btn btn-outline-primary" href="/logout">Logout</a>
-            {% endif %}
+    <div class="d-flex justify-content-between align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+        <h4 class="my-0 font-weight-normal"><a class="p-2 text-dark text-decoration-none" href="/">ZDL Collective</a></h4>
+        <nav class="my-2 my-md-0">
+            <a class="p-2 text-dark text-decoration-none" href="/about">About Zach</a>
+            <a class="p-2 text-dark text-decoration-none" href="/statistics">Statistics</a>
         </nav>
     </div>
         
     <div class="container">
-        {% include "bases/messages.html" %}
         <div class="container" style="margin-top:100px">
             {% block content %}
             {% endblock %}
