--- a/app/main/templates/bases/main.html
+++ b/app/main/templates/bases/main.html
@@ -1,39 +1,34 @@
-<!DOCTYPE html>
+{% load static %}
+<!doctype html>
 <html lang="en">
 <head>
-    <title>MyDjangoApp</title>
-   
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    {# Load template tags #}
-    {% load django_bootstrap5 %}
-    {% load static %}
-
-    {# CSS Bootstrap #}
-    {% bootstrap_css %}
-
+    
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    
+    <title>{% block title %}ZDL Collective{% endblock title %}</title>
 </head>
-<body class="override">
 
-    <div class="d-flex justify-content-between align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-        <h4 class="my-0 font-weight-normal"><a class="p-2 text-dark text-decoration-none" href="/">ZDL Collective</a></h4>
+<body class="override bg-black">
+    <div class="d-flex justify-content-between align-items-center p-3 px-md-4 mb-3 nav-pane">
+        <h4 class="my-0 font-weight-normal">
+            <a class="p-2 text-light text-decoration-none"  href="/">ZDL Collective</a>
+        </h4>
         <nav class="my-2 my-md-0">
-            <a class="p-2 text-dark text-decoration-none" href="/about">About Zach</a>
-            <a class="p-2 text-dark text-decoration-none" href="/statistics">Statistics</a>
+            <a class="p-2 text-light text-decoration-none" href="/about">About Zach</a>
+            <a class="p-2 text-light text-decoration-none" href="/statistics">Statistics</a>
         </nav>
     </div>
         
     <div class="container">
-        <div class="container" style="margin-top:100px">
-            {% block content %}
-            {% endblock %}
-        </div>
+        {% block content %}
+        {% endblock content %}
     </div>
 
-    {% include "bases/footer.html" %}
-
-    {% bootstrap_javascript %}
-
+    <!-- Bootstrap JS -->
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
